Added controller in patient service for gprc billing service

--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
+debug=true
+billing.service.address=localhost
+billing.service.port=9001
